# wasm-compose

./: README.md  composed.wasm  config.yml  world.wit
hello-runner/: Cargo.toml
hello-runner/src/: bindings.rs  main.rs
hello-runner/wit/: world.wit
hello-world/: Cargo.toml
hello-world/src/: bindings.rs  lib.rs
hello-world/wit/: world.wit
