[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.6.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
target = { path = "../world.wit",  world = "provider"}

[package.metadata.component.dependencies]
